--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <input type="password" name="password" />
         <label for="password2">Confirm Password:</label>
         <input type="password" name="password2" />
-        <input type="submit" value="Submit" />
+        <div class="btn">
+            <input type="submit" value="Submit" />
+        </div>
       </form>
       <script src="script.js"></script>
     </div>
