--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <input type="password" name="password" />
         <label for="password2">Confirm Password:</label>
         <input type="password" name="password2" />
-        <div class="btn">
-            <input type="submit" value="Submit" />
-        </div>
+        <input class="btn" type="submit" value="Submit" />
       </form>
       <script src="script.js"></script>
     </div>
