trying to add js validation

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="container">
       <h1>Sign Up Form</h1>
-      <form action="">
+      <form name="form1" action="#" onsubmit="return validate()">
         <label for="name">Name:</label>
         <input type="text" name="name" />
 
